Fixed FullscreenDisplay on Safari

--- a/src/components/RenderMedia/RenderMedia.module.css
+++ b/src/components/RenderMedia/RenderMedia.module.css
@@ -17,10 +17,12 @@
 
   max-width: 100%;
   max-height: 100%;
-  width: auto;
-  height: auto;
+
   display: flex;
   align-self: center;
+
+  min-width: 0;
+  min-height: 0;
 }
 
 .close-button {
@@ -54,21 +56,4 @@
 }
 
 @media (max-width: 575.98px) {
-  .fullscreen-preview-inner {
-    /* width: 100%; */
-    width: auto;
-    height: auto;
-    max-height: 100%;
-    max-width: 100%;
-    /* padding: var(--margin); */
-  }
-
-  .fullscreen-preview-inner img {
-    /* width: 100%; */
-    width: auto !important;
-    height: auto !important;
-    max-height: 100% !important;
-    max-width: 100% !important;
-    /* padding: var(--margin); */
-  }
 }
